# Ollama-rs

./: Cargo.toml  README.md  var.json.example
src/: config.rs  fetch.rs  lib.rs  main.rs
