[package]
name = "ollama-rs"
version = "0.1.0"
edition = "2021"
authors = ["samsit-phew <samsitkarki@gmail.com>"]
description = "A simple Ollama CLI client in Rust"

[lib]
name = "ollama_rs"
path = "src/lib.rs"

[[bin]]
name = "ollama-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
